--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,11 +1,11 @@
 browser = chrome
-url=https://demo.opencart.com/index.php?route=account/login
-username = naveenanimation20@gmail.com
-password = Selenium12345
+url = https://demo.opencart.com/index.php?route=account/login
+username = pooja_123@gmail.com
+password = Pooja123
 
-highlight=fale
-headless=
-incognito=
+highlight = false
+headless = false
+incognito = false
 
-huburl=
-remote=false
+huburl = 
+remote = false
