--- a/src/test/resources/config/stage.config.properties
+++ b/src/test/resources/config/stage.config.properties
@@ -1,11 +1,11 @@
 browser = chrome
-url=https://demo.opencart.com/index.php?route=account/login
-username = naveenanimation20@gmail.com
-password = Selenium12345
+url = https://demo.opencart.com/index.php?route=account/login
+username = gagantyagi2012@gmail.com
+password = test@123
 
-highlight=true
-headless=
-incognito=
+highlight = true
+headless = false
+incognito = false
 
-huburl=
-remote=false
+huburl = 
+remote = false
