--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,6 +1,6 @@
 browser = chrome
-url = https://demo.opencart.com/index.php?route=account/login
-username = pooja_123@gmail.com
+url = http://opencart.antropy.co.uk/index.php?route=accoun%EF%BB%BFt/login
+username = pooja.sedate@gmail.com
 password = Pooja123
 
 highlight = false
