--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,4 +1,5 @@
 browser = chrome
+browserversion=
 url = http://opencart.antropy.co.uk/index.php?route=accoun%EF%BB%BFt/login
 username = pooja.sedate@gmail.com
 password = Pooja123
@@ -7,5 +8,5 @@ highlight = false
 headless = false
 incognito = false
 
-huburl = 
-remote = false
+huburl = http://localhost:4444/wd/hub
+remote = true
