--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,6 +1,6 @@
 browser = chrome
 browserversion=
-url = http://opencart.antropy.co.uk/index.php?route=accoun%EF%BB%BFt/login
+url = https://demo.opencart.com/index.php?route=account/login
 username = pooja.sedate@gmail.com
 password = Pooja123
 
