--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,8 +1,8 @@
 browser = chrome
 browserversion=
 url = https://demo.opencart.com/index.php?route=account/login
-username = pooja.sedate@gmail.com
-password = Pooja123
+username = psriva34@gmail.com
+password = test1234
 
 highlight = false
 headless = false
