--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -8,7 +8,7 @@ highlight = false
 headless = false
 incognito = false
 
-huburl = 
-remote = false
+huburl = http://43.204.116.151:4444/wd/hub
+remote = true
 
 
