--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,6 +1,6 @@
 browser = chrome
 url = https://demo.opencart.com/index.php?route=account/login
-username = naveenanimation20@gmail.com
+username = test123@gmail.com
 password = Selenium12345
 
 highlight = true
