--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -8,7 +8,5 @@ highlight = false
 headless = false
 incognito = false
 
-huburl = http://13.127.202.81:4444/wd/hub
+huburl = http://localhost:4444/wd/hub
 remote = true
-
-
