--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -8,5 +8,5 @@ highlight = false
 headless = false
 incognito = false
 
-huburl = http://localhost:4444/wd/hub
-remote = true
+huburl = 
+remote = false
